# hr-attrition-prediction

./: Dockerfile  README.md  classification.ipynb  continuous_cols.pkl  final_logistic_model.pkl  finalized_model.sav  main.py  predict.py  preprocessor_ohe.pkl  pyproject.toml  requirements.txt  scaler_continuous.pkl  selected_features.pkl  test_model.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
