[project]
name = "hr-attrition"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "uvicorn>=0.38.0",
]
